Использование sqlg3 2.0: возможность передавать данные запроса/ответа не только в теле запроса HTTP